--- a/Introdução ao HTML/index.html
+++ b/Introdução ao HTML/index.html
@@ -6,11 +6,22 @@
     <title>Formulário de Cadastro</title>
 </head>
 <body>
-    <form name="signup">
-        Nome: <input type="text" name="name" /><br>
-        Idade: <input type="number" name="age" /><br>
-        Senha: <input type="password" name="password" /><br>
-        <button type="submit">Enviar</button>
+    <form>
+        <label>Text: </label><input type="text" /><br>
+        <label>Number: </label><input type="number" /><br>
+        <label>Range: </label><input type="range" /><br>
+        <label>Color: </label><input type="color" /><br>
+        <label>E-mail: </label><input type="e-mail" /><br>
+        <label>Url: </label><input type="url" /><br>
+        <label>Date: </label><input type="date" /><br>
+        <label>Week: </label><input type="week" /><br>
+        <label>Month: </label><input type="month" /><br>
+        <label>Checkbox: </label><input type="checkbox" /><input type="checkbox" /><br>
+        <label>Radio: </label><input type="radio" name="aceita" /><br>
+        <label>Hidden: </label><input type="hidden" /><br>
+        <label>File: </label><input type="file" /><br>
+        <label>Search: </label><input type="search" /><br>
+        <label>Button: </label><input type="submit" value="Enviar" /><br>
     </form>
 </body>
 </html>
