--- a/trilha-css-desafio-01/index.html
+++ b/trilha-css-desafio-01/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +8,14 @@
 </head>
 <link rel="stylesheet" href="assets/css/style.css">
 <body>
-  <header class="banner">
+  <header class="banner" style="background-image: url(assets/images/banner.png);">
     <div class="banner-content">
       <div class="logo">
         <img src="assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
       </div>
       <h1>Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
+      <button><a href="https://dio.me" style="text-decoration: none;"> me inscrever</a></button>
     </div>
   </header>
   <main>
