Adição das funcionalidades JavaScript

--- a/Primeiros-Passos-JavaScript/projeto-detona-ralph/index.html
+++ b/Primeiros-Passos-JavaScript/projeto-detona-ralph/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detona Ralph</title>
 
+    <link rel="shortcut icon" href="./src/images/favicon.jpg" type="image/x-icon">
+
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,11 +22,11 @@
         <div class="menu">
             <div class="menu-time">
                 <h2>Time Left</h2>
-                <h2>0</h2>
+                <h2 id="time-left">0</h2>
             </div>
             <div class="menu-score">
                 <h2>Your Score</h2>
-                <h2>0</h2>
+                <h2 id="score">0</h2>
             </div>
             <div class="menu-lives">
                 <img src="./src/images/player.png" alt="player">
